--- a/keyhere404filenotfound.html
+++ b/keyhere404filenotfound.html
@@ -80,8 +80,30 @@
       <div class=hbar2>
          &nbsp;
        <div class=stuff2> 
-         <p>Welcome to the master key manager.</p>
-         
+         <p>Welcome to the master key manager.</p><br/>
+         <br/>
+         <a href="https://tomthomason.github.io/keyhere404">Fake404</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
+         <a href="url">Vacant slot</a>
          
        </div>
       </div>
