--- a/keyhere404filenotfound.html
+++ b/keyhere404filenotfound.html
@@ -1,4 +1,4 @@
-#cc0066
+
 <html>
 <style>
 
@@ -82,28 +82,28 @@
        <div class=stuff2> 
          <p>Welcome to the master key manager.</p><br/>
          <br/>
-         <a href="https://tomthomason.github.io/keyhere404">Fake404</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
-         <a href="url">Vacant slot</a>
+         <a href="https://tomthomason.github.io/keyhere404">Fake404</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
+         <a href="url">Vacant slot</a><br/>
          
        </div>
       </div>
@@ -111,7 +111,6 @@
          &nbsp;
        </div>
       <div class=right>
-       <a href=newpage.html class=fing> website thing</a>
       </div>        
   </div>
 </body>
